# Detecting_toxicity

./: .gitignore  README.md  pyproject.toml
notebooks/: XGBoost.ipynb  baseline.ipynb  baseline_BERT.ipynb
outputs/: submission_ensemble.csv  submission_ensemble_v3.csv  submission_threshold_050.csv  submission_threshold_072.csv
